@@ -166,7 +166,6 @@ public class Listeners implements Listener {
 			// This is done kinda weird based on my internet findings but
 			// using NMS is probably the easiest way to go about it.
 			Block block = Block.getByName("glass");
-			//TODO: add beds to be indestructable
 
 			try {
 				Field field = Block.class.getDeclaredField("durability");
@@ -175,7 +174,6 @@ public class Listeners implements Listener {
 			} catch (NoSuchFieldException | IllegalAccessException exce) {
 				exce.printStackTrace();
 			}
-			//TODO: egg limits (global?)
 
 		}
 		
